--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Micro-service for management of Hypothesis engine experiments",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "check_lint": "./node_modules/.bin/eslint ./.eslintrc.json",
+    "test": "mocha --timeout 5000 tests/*_test.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,13 @@
   },
   "homepage": "https://github.com/anmolbabu/manager-api#readme",
   "dependencies": {
-    "node-uuid": "^1.4.8",
     "validator": "^9.2.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-http": "^3.0.0",
+    "eslint": "^4.15.0",
+    "mocha": "^2.4.5"
   }
 }
