--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Micro-service for management of Hypothesis engine experiments",
   "scripts": {
     "check_lint": "./node_modules/.bin/eslint ./.eslintrc.json",
-    "test": "mocha --timeout 5000 tests/*_test.js"
+    "test": "mocha --timeout 5000 tests/*_test.js --exit"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,7 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^3.0.0",
-    "eslint": "^4.15.0",
+    "eslint": "^4.16.0",
     "mocha": "^2.4.5"
   }
 }
