--- a/package.json
+++ b/package.json
@@ -8,24 +8,24 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fabric8-hdd/fabric8-hypothesis-manager-api.git"
+    "url": "git+https://github.com/fabric8-hypothesis/fabric8-hypothesis-manager-api.git"
   },
   "keywords": [],
   "author": "Anmol Babu <anmolbudugutta@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/fabric8-hdd/fabric8-hypothesis-manager-api/issues"
+    "url": "https://github.com/fabric8-hypothesis/fabric8-hypothesis-manager-api/issues"
   },
-  "homepage": "https://github.com/fabric8-hdd/fabric8-hypothesis-manager-api#readme",
+  "homepage": "https://github.com/fabric8-hypothesis/fabric8-hypothesis-manager-api#readme",
   "dependencies": {
-    "validator": "^9.2.0",
-    "hypothesis-core": "github:fabric8-hdd/fabric8-hypothesis-core"
+    "hypothesis-core": "github:fabric8-hypothesis/fabric8-hypothesis-core",
+    "validator": "^9.4.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^3.0.0",
-    "eslint": "^4.16.0",
+    "eslint": "^4.19.0",
     "mocha": "^2.4.5"
   }
 }
